# rust-web-server-experiment

./: .env  Cargo.toml
migrations/2023-06-04-132246_create_posts/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
