[package]
name = "rust-web-server-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel =  { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = "1.0.163"
tonic = "0.9.2"
